--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 # database
+DB_HOST=db
 DB_USER=postgres
 DB_PASSWORD=postgres
 DB_NAME=pg_global_english
@@ -7,6 +8,7 @@ DB_PORT=5432
 # backend
 API_PORT=3000
 NODE_ENV=development
+JWT_SECRET=supersecreto123
 
 # frontend
 WEB_PORT=5173
