--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,7 +2,7 @@ FROM node:25.0.0-alpine3.21
 
 WORKDIR /app
 
-COPY package.json package.json* ./
+COPY package*.json ./
 RUN npm install
 COPY . .
 EXPOSE 3000
