--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "http-errors": "^2.0.1",
+    "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2"
   },
   "devDependencies": {
@@ -26,6 +27,7 @@
     "@types/express": "^5.0.5",
     "@types/http-errors": "^2.0.5",
     "@types/node": "^24.10.1",
+    "@types/pg": "^8.15.6",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3"
   }
