--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,5 +3,6 @@ WORKDIR /app
 COPY package.json package-lock.json* .
 RUN npm install
 COPY . .
+ENV CHOKIDAR_USEPOLLING=true
 EXPOSE 5173
 CMD ["npm", "run", "dev"]
