--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,20 @@
 .env
 .env.local
 .env.production
+/backend/.env
+/frontend/.env
 
 # Docker
 postgres_data/
+docker-data/
+
+# Node modules
+/backend/node_modules/
+/frontend/node_modules/
+
+# Build output
+/backend/dist/
+/frontend/dist/
 
 # IDE
 .vscode/
